# hands-on-llms

./: .env.example  .gitignore  Fine_tuning_and_Inference_with_Falcon_7B_using_TRL_and_QLoRa.ipynb  LICENSE.md  README.md
.github/workflows/: cd_streaming_pipeline.yaml  ci_financial_bot.yaml  ci_streaming_pipeline.yaml  ci_training_pipeline.yaml  cicd_streaming_pipeline.yaml  destroy_aws_infrastructure.yaml  destroy_aws_streaming_pipeline.yaml  pep8_financial_bot.yaml  pep8_streaming_pipeline.yaml  pep8_training_pipeline.yaml  release_streaming_pipeline.yaml
dataset/: LICENSE
dataset_analysis/: README.md
modules/common/: constants.py
modules/common/data/: finqa.py  utils.py
modules/financial_bot/: .beamignore  .env.example  Makefile  README.md  pyproject.toml  requirements.txt
modules/financial_bot/configs/: dev_config.yaml
modules/financial_bot/financial_bot/: __init__.py  base.py  chains.py  constants.py  embeddings.py  handlers.py  langchain_bot.py  models.py  qdrant.py  template.py  utils.py
modules/financial_bot/tools/: bot.py  run_chain.py  ui.py
modules/notebooks/: train_on_finqa.ipynb
modules/q_and_a_dataset_generator/: Makefile  README.md  pyproject.toml  set_env_variables_template.sh
modules/q_and_a_dataset_generator/data/: training_data.json
modules/q_and_a_dataset_generator/scripts/: download_news_from_alpaca.py  embed_news_into_qdrant.py  generate_training_data.py
modules/q_and_a_dataset_generator/src/: alpaca_news_api.py  logger.py  paths.py  transformers.py  vector_db_api.py
modules/streaming_pipeline/: .beamignore  .dockerignore  .env.example  Makefile  README.md  logging.yaml  pyproject.toml  requirements.txt  setup_ec2.sh
modules/streaming_pipeline/deploy/: Dockerfile  create_user_data.sh  entrypoint.sh  launch_ec2.sh  terminate_ec2.sh  to_ecr.sh  user_data_template.sh
modules/streaming_pipeline/streaming_pipeline/: __init__.py  alpaca.py  alpaca_batch.py  alpaca_stream.py  base.py  constants.py  documents.py  embeddings.py  flow.py  mocked.py  models.py  qdrant.py  run.py  utils.py  vector_db.py
modules/streaming_pipeline/tools/: dev_run.py  run.py  run_batch.py  run_batch_dev.py  run_dev.py  run_real_time.py  search.py
modules/tools/: train_finqa.py
modules/training/: __init__.py  constants.py  metrics.py  models.py  pyproject.toml  requirements.txt  train.py  utils.py
modules/training/api/: ChatAPI.py  FinQATrainingAPI.py  __init__.py
modules/training/data/: finqa.py
modules/training_pipeline/: .beamignore  Makefile  README.md  models.py  pyproject.toml  requirements.txt
modules/training_pipeline/configs/: config.yaml  dev_config.yaml  dev_inference_config.yaml  dev_training_config.yaml  inference_config.yaml  training_config.yaml
modules/training_pipeline/dataset/: real_world_data.json  testing_data.json  training_data.json
modules/training_pipeline/tools/: inference_finqa.py  inference_run.py  train_finqa.py  train_run.py
modules/training_pipeline/training_pipeline/: __init__.py  configs.py  constants.py  metrics.py  models.py  utils.py
modules/training_pipeline/training_pipeline/api/: ChatAPI.py  FinQAInferenceAPI.py  FinQATrainingAPI.py  __init__.py  inference.py  training.py
modules/training_pipeline/training_pipeline/data/: finqa.py  qa.py  utils.py
modules/training_pipeline/training_pipeline/prompt_templates/: prompter.py
modules/training_pipeline/training_pipeline/templates/: prompter.py
notebooks/: README.md  explore_dataset.ipynb  prompts_eda.ipynb  train_dummy_dataset.ipynb  train_on_finqa.ipynb
tools/: train_finqa.py
training/: __init__.py  models.py
