[tool.poetry]
name = "financial-bot"
version = "0.1.0"
description = "Financial Bot (Falcon7B-LLM) with Langchain"
authors = ["Joywalker <alexandrurazvant@gmail.com>"]
readme = "README.md"
packages = [{include = "financial_bot"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qdrant-client = "1.1.1"
langchain = "^0.0.285"
comet-ml = "^3.33.7"
transformers = "^4.31.0"
peft = "^0.4.0"
accelerate = "^0.21.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.1"
einops = "^0.6.1"
fire = "^0.5.0"
comet-llm = "^1.1.0"
bitsandbytes = "^0.41.1"
torch = "2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.isort]
case-sensitive = true
