[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Pau <plabartabajo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
qdrant-client = "^1.4.0"
requests = "^2.31.0"
fire = "^0.5.0"
unstructured = "^0.10.2"
transformers = "^4.31.0"
torch = "^2.0.1"
sentencepiece = "^0.1.99"
pydantic = "^2.2.0"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
