[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Paul Iusztin <p.e.iusztin@gmail.com>", "Pau Labarta Bajo <plabartabajo@gmail.com>""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
