[tool.poetry]
name = "training_pipeline"
version = "0.1.0"
description = ""
authors = ["Paul Iusztin <p.e.iusztin@gmail.com>", "Pau Labarta Bajo <plabartabajo@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
bitsandbytes = "^0.41.0"
transformers = "^4.31.0"
peft = "^0.4.0"
accelerate = "^0.21.0"
datasets = "^2.14.2"
trl = "^0.4.7"
comet-ml = "3.35.1"
python-dotenv = "^1.0.0"
scipy = "^1.11.1"
einops = "^0.6.1"
beam-sdk = "0.15.9"
psutil = "^5.9.5"
torch = {version = "2.0.1+cu118", source = "torch"}
fire = "^0.5.0"
comet-llm = "^1.1.0"
unstructured = "^0.10.28"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cuda-cupti-cu11 = "11.7.101"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cufft-cu11 = "10.9.0.58"
nvidia-curand-cu11 = "10.2.10.91"
nvidia-cusolver-cu11 = "11.4.0.1"
nvidia-cusparse-cu11 = "11.7.4.91"
nvidia-nccl-cu11 = "2.14.3"
nvidia-nvtx-cu11 = "11.7.91"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
notebook = "^7.0.1"
ruff = "^0.0.284"
black = "^23.7.0"



[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py310"
